added support for "avro.java.string" property
- string type support now adheres to the native avro implementation
- Utf8 is the default string type as in the native implementation (previously: java.lang.String)
- serializers use java.lang.CharSequence, thus support all types of provided string types
- minor fixes in test classes related to introduced string type support changes